# reposcore-py

./: README.md  cache_manager.py  calc_score.py  gh_service.py  main.py  output_writer.py  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_cache_manager.py  test_cache_metadata.py  test_calc_score.py  test_output_writer.py  test_repository_validation.py  test_smoke.py
tools/: update-synopsis.py
