[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reposcore-py"
version = "0.1.0"
description = "A CLI for scoring student participation in an open-source class repo, implemented in Python using GraphQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[requests]>=3.5.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-ruff>=0.5",
    "ruff>=0.8.0",
]

[project.scripts]
reposcore = "main:cli"

[tool.hatch.build.targets.wheel]
only-include = [
  "main.py",
  "output_writer.py",
  "calc_score.py",
  "gh_service.py",
  "cache_manager.py",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format"